minor UI alignment fixed 2

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ header input {
 
 .movie-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 0fr));
   gap: 30px;
   max-width: 1200px;
   margin: 0 auto;
